--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     // Adds the Kotlin Gradle plugin
     id 'org.jetbrains.kotlin.jvm' version '2.0.0'
+    id 'org.spongepowered.mixin' version '0.7.+'
     // OPTIONAL Kotlin Serialization plugin
     //id 'org.jetbrains.kotlin.plugin.serialization' version '2.0.0'
 }
@@ -103,7 +104,16 @@ dependencies {
     // Use the latest version of Minecraft Forge
     minecraft "net.minecraftforge:forge:$minecraft_version-$forge_version"
 
+    // Apply Mixin AP
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
     implementation "thedarkcolour:kotlinforforge:$kff_version"
+}
+
+mixin {
+    // MixinGradle Settings
+    add sourceSets.main, 'astrosync.mixins.refmap.json'
+    config 'astrosync.mixins.json'
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
