--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ mapping_version=2023.09.03-1.20.1
 mod_id=astrosync
 mod_name=Astro Sync
 mod_version=1.0.0
-mod_authors=DannBrown
+mod_authors=DannBrown, VitorSantosB
 mod_description=Auto Updates modpack files
 mod_license=All rights reserved
 # Used in maven publishing, should match mod sources: https://maven.apache.org/guides/mini/guide-naming-conventions.html
